--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <main></main>
+    <main>
+        <div class="container">
+            <img id="lampadina" src="./img/white_lamp.png" alt="Lampadina spenta">
+            <button id="bottone">Accendi</button>
+        </div>
+    </main>
     <script src="./js/script.js"></script>
 </body>
 </html>
